--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agencia-design",
+  "name": "my-app",
   "version": "0.1.0",
   "homepage": "https://github.com/giansb/react-site-design.git",
   "private": true,
@@ -37,8 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^5.0.0"
   }
 }
